Fix alignment of sorting buttons in Gallery

--- a/core/css/apps/official/_gallery.scss
+++ b/core/css/apps/official/_gallery.scss
@@ -6,7 +6,7 @@
 	background-color: $background-dark;
 }
 
-#controls .button.sorting {
+#controls .actions > div > .button {
 	padding: 8px 5px;
 }
 
